force-app/main/default/objects/Delivery_Routes__c/Delivery_Routes__c.object-meta.xml
<CustomObject>
    <label>Delivery Route</label>
    <nameField>
        <label>Delivery Routes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>