force-app/main/default/objects/Delivery_Routes__c/fields/Avg_Hours_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Avg_Hours_to_Complete__c</fullName>
    <label>Avg Hours to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>