force-app/main/default/objects/Delivery_Routes__c/fields/Delivery_Partner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Routes</relationshipLabel>
    <relationshipName>Delivery_Routes</relationshipName>
    <type>Lookup</type>
</CustomField>