force-app/main/default/objects/Delivery_Routes__c/fields/Single_or_Multi__c.field-meta.xml
<CustomField>
    <fullName>Single_or_Multi__c</fullName>
    <label>Single or Multi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Destination</fullName>
            </value>
            <value>
                <fullName>Multi-Customer Destination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>