force-app/main/default/objects/Delivery_Routes__c/fields/Starting_point__c.field-meta.xml
<CustomField>
    <fullName>Starting_point__c</fullName>
    <label>Starting point</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>